--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .row {
   width: 992px;
   margin-left: auto;
@@ -61,3 +66,74 @@ img{
 }
 
 /*PARTE RESPONSIVE*/
+
+@media screen and (max-width: 420px) {
+
+  .clear {
+    display: none;
+  }
+
+  .container div{
+    border: 2px solid red;
+  }
+
+  .container.grey{
+      background-color: #f2f2cd;
+      padding: 0 13px 13px 13px;
+      width: 100%;
+      
+    }
+
+  .row{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0;
+
+  }
+
+  .row img{
+    max-width: 100%;
+    height: 150px;
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
+  
+  /* BLOCCO LEZIONI RESPONSIVE */
+
+  #lezioni .row > .left, 
+  #lezioni .row > .right{
+    width: 100%;
+    float: none;
+    display: block;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  /* BLOCCO STEPS RESPONSIVE */
+  #steps .row > .left,
+  #steps .row > .central,
+  #steps .row > .right{
+    width: 100%;
+    float: none;
+    display: block;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  /* BLOCCO PERCHE */
+  #why .row > .first,
+  #why .row > .second,
+  #why .row > .third {
+    width: 100%;
+    float: none;
+    display: block;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+
+}
